horizontal scroll fix snypemedia.css

--- a/css/snypemedia.css
+++ b/css/snypemedia.css
@@ -5,6 +5,9 @@ html {
 }
 
 body {
+    overflow-x: hidden;
+    left: 0;
+    right: 0;
     margin: 0;
     min-height: 100%;
     background-color: #fff;
